--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ a {
     margin-right: auto;
 }
 .dots {
-    background-image: linear-gradient(45deg,#5619b833 0%,#bd16ff5e 100%);
+    background-image: linear-gradient(45deg,#3f034b4d 0%,#bd16ff5e 100%);
     border-radius: 30% 70% 89% 11% / 66% 54% 46% 34%;
     height: 420px;
     width: 420px;
@@ -291,6 +291,20 @@ a {
     z-index: -1;
     transform: skewY(-6deg);
     transform-origin: top left ;
+}
+@media (max-width: 767px) {
+    .landing::before {
+            content: "";
+            position: absolute;
+            background-color: #ececec;
+            left: 0;
+            top: -30px;
+            height: 90%;
+            width: 100%;
+            z-index: -352;
+            transform: skewY(-20deg);
+            transform-origin: top left;
+        }
 }
 .landing .container {
     min-height: calc(100vh - 72px);
@@ -1791,7 +1805,7 @@ a {
         display: none;
     }
     .landing .dots {
-    background-image: linear-gradient(45deg,#5619b813 0%,#bd16ff38 100%);
+    background-image: linear-gradient(45deg,#5601779f 30%,#bd16ff38 70%);
     border-radius: 30% 70% 89% 12% / 66% 54% 46% 34%;
     height: 350px;
     width: 350px;
